# GeneBriefer

./: README.md  gene_briefer.py  pyproject.toml
templates/: my_custom_prompt.j2  summary_prompt.j2
